Fix problem where Dialogs couldn't be closed on iOS. Refs #714

--- a/Dialog/themes/bootstrap/Dialog.less
+++ b/Dialog/themes/bootstrap/Dialog.less
@@ -20,6 +20,7 @@
 
 .d-dialog-icon {
 	cursor: pointer;
+	border: none;
 }
 
 // Default close icon if app does not override "d-close-icon" class name.
